--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   font-family: "Kumbh Sans";
   font-size: smaller;
   font-weight: 700;
-  height: 100vh;
+  min-height: 100vh;
   justify-content: center;
   background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
   background-repeat: no-repeat;
@@ -22,21 +22,21 @@ body {
 }
 
 .card {
-  background: white;
+  background: #fff;
   border-radius: 1.5rem;
   display: flex;
   flex-direction: column;
-  height: 350px;
+  max-height: 23.438rem;
   justify-content: space-between;
   position: relative;
-  max-width: 360px;
-  min-width: 360px;
+  max-width: 22.5rem;
+  min-width: 22.5rem;
 }
 
 .card-header {
   background: url("../images/bg-pattern-card.svg");
   border-radius: 1.5rem 1.5rem 0 0;
-  height: 150px;
+  min-height: 9rem;
 }
 
 .card-image {
@@ -55,22 +55,39 @@ body {
   padding-top: 50px;
 }
 
+.name {
+  font-size: 1.125rem;
+}
+
 .age {
-  font-weight: lighter;
+  font-weight: 400;
+}
+
+.city {
+    color: hsl(0, 0%, 59%);
+    font-weight: 400;
 }
 
 .footer {
   align-items: center;
   display: flex;
   justify-content: space-evenly;
-  padding: 30px 10px;
+  padding: 1.875rem 0.625rem 0.625rem;
   text-align: center;
-  border-top: 1px solid #bbbbbb;
+  border-top: 1px solid hsl(0, 0%, 59%);
   width: 100%;
 }
 
+.count {
+  font-size: 1.125rem;
+  padding-bottom: .625rem;
+}
+
 .label {
-  font-weight: lighter;
+  color: hsl(0, 0%, 59%);
+  font-size: 0.6rem;
+  font-weight: 400;
+  letter-spacing:.0625rem;
 }
 
 .attribution {
