--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Kumbh Sans";
-  font-size: smaller;
+  font-size: 1.5rem;
   font-weight: 700;
   min-height: 100vh;
   justify-content: center;
@@ -36,14 +36,16 @@ body {
 .card-header {
   background: url("../images/bg-pattern-card.svg");
   border-radius: 1.5rem 1.5rem 0 0;
-  min-height: 9rem;
+  min-height: 8rem;
+  position: relative;
 }
 
 .card-image {
   border: 1px solid #fff;
   border-radius: 100%;
-  position: static;
-  transform: translate(150px, 105px);
+  position: absolute;
+  top: 75%;
+  left: 40%;
   width: 5.25rem;
 }
 
@@ -52,19 +54,27 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   padding-top: 50px;
 }
 
+.card-content p {
+  line-height: 1.5;
+}
+
 .name {
-  font-size: 1.125rem;
+  font-weight:bold;
 }
 
 .age {
+  color: hsl(0, 0%, 59%);
   font-weight: 400;
 }
 
 .city {
     color: hsl(0, 0%, 59%);
+    font-size: .9rem;
     font-weight: 400;
 }
 
@@ -72,14 +82,14 @@ body {
   align-items: center;
   display: flex;
   justify-content: space-evenly;
-  padding: 1.875rem 0.625rem 0.625rem;
+  padding: 1rem 0.625rem 1rem;
   text-align: center;
   border-top: 1px solid hsl(0, 0%, 59%);
   width: 100%;
 }
 
 .count {
-  font-size: 1.125rem;
+  font-size: 1rem;
   padding-bottom: .625rem;
 }
 
