--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,8 @@ body {
   border-radius: 1.5rem;
   display: flex;
   flex-direction: column;
-  max-height: 23.438rem;
+  min-height: 24.04rem;
+  max-height: 24.04rem;
   justify-content: space-between;
   position: relative;
   max-width: 22.5rem;
@@ -36,17 +37,18 @@ body {
 .card-header {
   background: url("../images/bg-pattern-card.svg");
   border-radius: 1.5rem 1.5rem 0 0;
-  min-height: 8rem;
+  min-height: 8.75rem;
   position: relative;
 }
 
 .card-image {
-  border: 1px solid #fff;
-  border-radius: 100%;
   position: absolute;
-  top: 75%;
-  left: 40%;
-  width: 5.25rem;
+  width: 6rem;
+  height: 6rem;
+  left: calc(50% - 6rem/2);
+  top: calc(50% + 3rem/2);
+  border: 5px solid #FFFFFF;
+  border-radius: 100%;
 }
 
 .card-content {
@@ -64,7 +66,12 @@ body {
 }
 
 .name {
-  font-weight:bold;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  text-align: center;
+  color: #2E3349;
 }
 
 .age {
@@ -73,9 +80,10 @@ body {
 }
 
 .city {
-    color: hsl(0, 0%, 59%);
-    font-size: .9rem;
-    font-weight: 400;
+  color: hsl(0, 0%, 59%);
+  font-size: .875rem;
+  font-weight: 400;
+  line-height: .88rem;
 }
 
 .footer {
@@ -84,20 +92,22 @@ body {
   justify-content: space-evenly;
   padding: 1rem 0.625rem 1rem;
   text-align: center;
-  border-top: 1px solid hsl(0, 0%, 59%);
+  border-top: 1px solid #E8E9EC;
   width: 100%;
 }
 
 .count {
-  font-size: 1rem;
+  font-size: 1.125rem;
+  line-height: 1.125rem;
   padding-bottom: .625rem;
 }
 
 .label {
   color: hsl(0, 0%, 59%);
-  font-size: 0.6rem;
+  font-size: 0.62875rem;
   font-weight: 400;
-  letter-spacing:.0625rem;
+  letter-spacing: .0625rem;
+  line-height: 0.62875rem;
 }
 
 .attribution {
@@ -106,5 +116,6 @@ body {
   font-size: 1rem;
   text-align: center;
 }
+
 .attribution a {
   color: hsl(228, 45%, 44%);
